# nonebot_plugin_BFVsearch

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_bfvsearch/: __init__.py
