[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot_plugin_bfvsearch"
version = "0.1.5"
description = "基于 Nonebot2 的战地 5 QQ 群管理插件。"
readme = "README.md"
authors = [{name = "Swallow513", email = "3214115907@qq.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8" 
dependencies = [
    "nonebot2>=2.2.0",  
    "aiohttp>=3.10.6", 
    "aiocache>=0.12.3",  
    "nonebot-plugin-htmlrender>=0.3.0",
    "nonebot-adapter-onebot>=2.2.0"
]
